# Lyra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.json
blender/: harrier.blend  harrier.mtl
src/: entities.cpp  entities.h  entity.h  gamemode.h  gamemodespace.cpp  gamemodespace.h  main.cpp  settings.cpp  settings.h  systeminput.cpp  systeminput.h  window.cpp  window.h
